@@ -1,3 +1,9 @@
+2002-06-02  Marcus Brinkmann  <marcus@gnu.org>
+
+	* console.c (vcons_lookup): Correct nesting.
+	(vcons_release): Negate if condition.
+	Delete VCONS_LIST in CONS with last virtual console.
+
 2002-03-23  James A. Morrison  <ja2morri@uwaterloo.ca>
 
 	* main.c (main): Use error, not fprintf and exit.
